--- a/examples/disclosure/css/disclosure-navigation.css
+++ b/examples/disclosure/css/disclosure-navigation.css
@@ -7,7 +7,8 @@
 
 .disclosure-nav ul {
   background-color: #eee;
-  border: 1px solid #630;
+  border: 1px solid #005a9c;
+  border-top-width: 5px;
   border-radius: 0 0 4px 4px;
   display: block;
   list-style-type: none;
@@ -27,30 +28,52 @@
   display: block;
   margin: 0;
   padding: 0.5em 1em;
+  text-decoration: underline;
 }
 
 .disclosure-nav ul a:hover,
 .disclosure-nav ul a:focus {
-  background-color: #000;
-  color: #fff;
+  background-color: #ddd;
+  margin-bottom: 0;
+  text-decoration: none;
+}
+
+.disclosure-nav ul a:focus {
+  outline: 5px solid rgba(0, 90, 156, 0.75);
+  position: relative;
 }
 
 .disclosure-nav button {
+  align-items: center;
   border: 1px solid transparent;
-  display: inline-block;
+  border-right-color: #ccc;
+  display: flex;
   padding: 1em;
 }
 
-.disclosure-nav li + li button {
-  border-left-color: #ccc;
+.disclosure-nav button::after {
+  content: "";
+  border-bottom: 1px solid #000;
+  border-right: 1px solid #000;
+  height: 0.5em;
+  margin-left: 0.75em;
+  width: 0.5em;
+  transform: rotate(45deg);
 }
 
 .disclosure-nav button:focus {
-  border-color: #630;
-  box-shadow: inset 0 0 4px 0 #630;
+  border-color: #005a9c;
+  outline: 5px solid rgba(0, 90, 156, 0.75);
+  position: relative;
 }
 
+.disclosure-nav button:hover,
 .disclosure-nav button[aria-expanded=true] {
-  background-color: #630;
+  background-color: #005a9c;
   color: #fff;
+}
+
+.disclosure-nav button:hover::after,
+.disclosure-nav button[aria-expanded=true]::after {
+  border-color: #fff;
 }
