--- a/examples/disclosure/css/disclosure-navigation.css
+++ b/examples/disclosure/css/disclosure-navigation.css
@@ -77,3 +77,13 @@
 .disclosure-nav button[aria-expanded=true]::after {
   border-color: #fff;
 }
+
+/* Styles for example page content section */
+.disclosure-pagecontent {
+  border: 1px solid #ccc;
+  padding: 1em;
+}
+
+.disclosure-pagecontent h3 {
+  margin-top: 0.5em;
+}
