added feature to move to the next or previosu month when clicking on a disabled date

--- a/examples/datepicker/css/datepicker.css
+++ b/examples/datepicker/css/datepicker.css
@@ -189,8 +189,11 @@ table.dates td {
 }
 
 .disabled {
-  cursor: not-allowed;
   color: #afafaf;
+}
+
+.disabled:hover {
+  color: black;
 }
 
 .dateButton:disabled {
