fixed bugs with buttons for changing the next/previous year and month buttons

--- a/examples/datepicker/css/datepicker.css
+++ b/examples/datepicker/css/datepicker.css
@@ -12,6 +12,10 @@
   top: 3px;
 }
 
+.datepicker button.menubutton.icon {
+  left: -4px;
+}
+
 .datepicker span.arrow {
   margin: 0;
   padding: 0;
