changed status roles to aria-liveregions, removed aria-controls and aria-haspopup

--- a/examples/dialog-modal/css/datepicker.css
+++ b/examples/dialog-modal/css/datepicker.css
@@ -32,7 +32,7 @@
   width: 20%;
 }
 
-.datepickerDialog {
+.datepicker .datepickerDialog {
   position: absolute;
   width: 45%;
   clear: both;
@@ -44,7 +44,7 @@
   background-color: #fff;
 }
 
-.header {
+.datepicker .header {
   cursor: default;
   background-color: hsl(216, 80%, 55%);
   padding: 7px;
@@ -55,47 +55,51 @@
   justify-content: space-around;
 }
 
-.header span {
+.datepicker .header h2 {
+  margin: 0;
+  padding: 0;
   display: inline-block;
+  font-size: 1em;
+  color: white;
 }
 
-.header button {
+.datepicker .header button {
   border-style: none;
   background: transparent;
 }
 
-.datepickerDialog button::-moz-focus-inner {
+.datepicker .datepickerDialog button::-moz-focus-inner {
   border: 0;
 }
 
-.prevYear,
-.prevMonth,
-.nextMonth,
-.nextYear {
+.datepicker .prevYear,
+.datepicker .prevMonth,
+.datepicker .nextMonth,
+.datepicker .nextYear {
   padding: 4px;
   width: 24px;
   height: 24px;
   color: white;
 }
 
-.prevYear:focus,
-.prevMonth:focus,
-.nextMonth:focus,
-.nextYear:focus {
+.datepicker .prevYear:focus,
+.datepicker .prevMonth:focus,
+.datepicker .nextMonth:focus,
+.datepicker .nextYear:focus {
   padding: 2px;
   border: 2px solid white;
   border-radius: 4px;
   outline: 0;
 }
 
-.dialogButtonGroup {
+.datepicker .dialogButtonGroup {
   text-align: right;
   margin-top: 1em;
   margin-bottom: 1em;
   margin-right: 1em;
 }
 
-.dialogButton {
+.datepicker .dialogButton {
   padding: 5px;
   margin-left: 1em;
   width: 5em;
@@ -107,12 +111,12 @@
   border-radius: 5px;
 }
 
-.dialogButton:focus {
+.datepicker .dialogButton:focus {
   padding: 4px;
   border: 2px solid black;
 }
 
-.fa-calendar-alt {
+.datepicker .fa-calendar-alt {
   color: hsl(216, 89%, 72%);
 }
 
@@ -134,11 +138,11 @@
   text-align: center;
 }
 
-.dateRow {
+.datepicker .dateRow {
   border: 1px solid black;
 }
 
-.dateCell {
+.datepicker .dateCell {
   outline: 0;
   border: 0;
   padding: 0;
@@ -147,7 +151,7 @@
   width: 40px;
 }
 
-.dateButton {
+.datepicker .dateButton {
   padding: 0;
   margin: 0;
   line-height: inherit;
@@ -159,35 +163,35 @@
   background: #eee;
 }
 
-.dateButton:focus,
-.dateButton:hover {
+.datepicker .dateButton:focus,
+.datepicker .dateButton:hover {
   padding: 0;
   background-color: hsl(216, 80%, 92%);
 }
 
-.dateButton:focus {
+.datepicker .dateButton:focus {
   border-width: 2px;
   border-color: rgb(100, 100, 100);
   outline: 0;
 }
 
-.dateButton[aria-selected] {
+.datepicker .dateButton[aria-selected] {
   border-color: rgb(100, 100, 100);
 }
 
-.dateButton[tabindex="0"] {
+.datepicker .dateButton[tabindex="0"] {
   background-color: hsl(216, 80%, 92%);
 }
 
-.disabled {
+.datepicker .disabled {
   color: #afafaf;
 }
 
-.disabled:hover {
+.datepicker .disabled:hover {
   color: black;
 }
 
-.dateButton:disabled {
+.datepicker .dateButton:disabled {
   color: #777;
   background-color: #fff;
   border: none;
