--- a/examples/spinbutton/css/datepicker-spinbuttons.css
+++ b/examples/spinbutton/css/datepicker-spinbuttons.css
@@ -32,17 +32,17 @@
   color: #666;
 }
 
-.datepicker-spinbuttons .spinbutton:focus {
+.datepicker-spinbuttons .spinbutton.focus {
   outline: 2px solid #005a9c;
 }
 
-.datepicker-spinbuttons .spinbutton:focus,
+.datepicker-spinbuttons .spinbutton.focus,
 .datepicker-spinbuttons .spinbutton:hover {
   color: #444;
   background-color: #eee;
 }
 
-.datepicker-spinbuttons .spinbutton:focus .value,
+.datepicker-spinbuttons .spinbutton.focus .value,
 .datepicker-spinbuttons .spinbutton:hover .value {
   background-color: #fff;
   color: black;
@@ -56,6 +56,14 @@
   border-top: 1px solid black;
 }
 
+.datepicker-spinbuttons .spinbutton button {
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+}
+
+
 .datepicker-spinbuttons .spinbutton .decrease svg polygon,
 .datepicker-spinbuttons .spinbutton .increase svg polygon {
   fill: #333;
@@ -68,7 +76,7 @@
   top: 4px;
 }
 
-.datepicker-spinbuttons .spinbutton:focus svg polygon {
+.datepicker-spinbuttons .spinbutton.focus svg polygon {
   fill: #005a9c;
   stroke: #005a9c;
 }
