--- a/examples/carousel/css/carousel-2-tablist-more-accessible.css
+++ b/examples/carousel/css/carousel-2-tablist-more-accessible.css
@@ -1,31 +1,101 @@
 
 /* .carousel */
 
-.carouselTablist .carousel-inner {
-  display: static;
+.carouselTablist {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  background-color: #eee;
+  border: #eee solid 4px;
+  border-radius: 5px;
 }
 
-.carousel .carousel-item {
+.carouselTablist [role=tabpanel] {
+  padding: 0;
+  margin: 0;
   display: none;
   max-width: 900px;
+  position: relative;
   width: 100%;
 }
 
-.carouselTablist .carousel-item.active {
+.carouselTablist [role=tabpanel].active {
   display: block;
+}
+
+.carouselTablist .carousel-items .carousel-image {
+  margin: 0;
+  padding: 1px;
+  border: 4px solid transparent;
+}
+
+.carouselTablist .carousel-items.focus .carousel-image {
+  border-color: #005a9c;
+}
+
+.carouselTablist .carousel-items .carousel-image a[href],
+.carouselTablist .carousel-items .carousel-image a[href]:focus {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.carouselTablist [role=tabpanel] .carousel-image a img {
+  width: 100%;
+}
+
+/* More accessible caption stylinh */
+
+.carouselTablist [role=tabpanel] .carousel-caption {
+  padding: 0;
+  margin: 0;
+  height: 60px;
+  width: 100%;
+  right: 15%;
+  left: 15%;
+  color: black;
+  text-align: center;
+}
+
+.carouselTablist [role=tabpanel] .carousel-caption a {
+  display: inline-block;
+  margin: 0;
+  padding: 2px;
+  color: black;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  text-decoration: underline;
+}
+
+.carouselTablist [role=tabpanel] .carousel-caption p {
+  padding: 0;
+  margin: 0;
+  font-size: 1em;
+  line-height: 1.5;
+}
+
+.carouselTablist [role=tabpanel] .carousel-caption h3 {
+  font-size: 1.1em;
+  padding: 0;
+  margin: 0;
+}
+
+.carouselTablist [role=tabpanel] .carousel-caption h3 a {
+  font-weight: 600;
+}
+
+.carouselTablist [role=tabpanel] .carousel-caption a:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.carouselTablist [role=tabpanel] .carousel-caption a:focus {
+  border-color: #005a9c;
 }
 
 /* Shared CSS for Pause and Tab Controls */
 
-.carousel .controls {
-  margin: 0;
-  padding: 0;
-  width: 100%;
+.carouselTablist .controls {
   position: relative;
-  height: 36px;
-  background-color: #eee;
-  border: 4px solid #eee;
-  border-radius: 5px 5px 0 0;
 }
 
 /* Pause Control */
@@ -36,8 +106,9 @@
   background-color: transparent;
   border: none;
   outline: none;
-  top: 0;
+  top: 6px;
   left: 6px;
+  z-index: 20;
 }
 
 .carouselTablist .controls button svg rect.background {
@@ -87,14 +158,16 @@
 /* Shared CSS for Tabs */
 
 .carouselTablist [role="tablist"] {
+  position: relative;
+  top: 4px;
   text-align: center;
 }
 
 .carouselTablist [role="tablist"] .border {
   display: inline-block;
   border: 2px transparent solid;
-  border-radius: 15px;
-  height: 30px;
+  border-radius: 13px;
+  height: 26px;
   background-color: transparent;
 }
 
@@ -103,22 +176,25 @@
   background-color: #005a9c;
 }
 
-.carouselTablist [role="tab"] {
+.carouselTablist button[role="tab"] {
+  position: relative;
+  top: -2px;
   padding: 0;
   margin: 0;
   background-color: transparent;
   border: none;
   outline: none;
   width: 34px;
+  z-index: 20;
 }
 
 .carouselTablist [role="tab"] circle.border {
   display: none;
-  z-index: 12;
+  z-index: 14;
 }
 
 .carouselTablist [role="tab"] circle.tab {
-  z-index: 16;
+  z-index: 18;
 }
 
 .carouselTablist [role="tab"] circle.tab-background {
@@ -126,7 +202,7 @@
   fill: black;
   stroke-width: 2px;
   opacity: 0.6;
-  z-index: 14;
+  z-index: 16;
 }
 
 .carouselTablist [role="tab"] circle.tab,
@@ -149,64 +225,15 @@
   fill: #005a9c;
 }
 
-/* More like bootstrap, less accessible */
-
-.carouselTablist .carousel-items {
-  border: solid 2px transparent;
+.carouselTablist [role="tab"]:hover circle.tab-background {
+  fill: white;
+  stroke: white;
+  opacity: 1;
 }
 
-.carouselTablist .carousel-items.focus {
-  border-color: white;
-  outline: solid 3px #005a9c;
-}
-
-.carouselTablist .carousel-item .carousel-image a img {
-  height: 100%;
-  width: 100%;
-}
-
-.carousel .carousel-item .carousel-caption {
-  margin: 0;
-  padding: 0.5em;
-  width: 100%;
-  height: 3em;
-  text-align: center;
-}
-
-.carousel .carousel-item .carousel-caption a {
-  display: inline-block;
-  background-color: rgba(0, 0, 0, 0);
-  padding-left: 0.25em;
-  padding-right: 0.25em;
-  padding-top: 0.125em;
-  padding-bottom: 0.125em;
-  border-radius: 5px;
-  border: 2px solid transparent;
-  margin: 0;
-  text-decoration: underline;
-}
-
-.carousel .carousel-item .carousel-caption h3 {
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
-}
-
-.carousel .carousel-item .carousel-caption h3 a {
-  color: black;
-}
-
-.carousel .carousel-item .carousel-caption a:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.carousel .carousel-item .carousel-caption a:focus {
-  border-color: #005a9c;
-  background-color: rgba(0, 0, 0, 0.1);
-  outline: none;
-}
-
-.carousel .carousel-item .carousel-caption p {
-  margin: 0;
-  padding: 0;
+.carouselTablist [role="tab"]:hover circle.border,
+.carouselTablist [role="tab"]:hover circle.tab {
+  fill: #005a9c;
+  stroke: #005a9c;
+  opacity: 1;
 }
